# DDoS-Detection-System-with-ML

./: .gitignore  CMakeLists.txt  DATASET_BREAKDOWN.md  NEXT_STEPS.md  PHASE2_TESTING.md  PHASE_STATUS.md  PREPROCESSING_GUIDE.md  README.md  TESTING_GUIDE.md  blackhole.json  plan.md
config/: detection_config.json
documents/: DATA_SOURCES.md  GPU_USAGE.md  KERNEL_FILES_USAGE.md  MODEL_IMPROVEMENT.md  MODEL_RETRAINING_SUMMARY.md  NEXT_STEPS.md  NEXT_STEPS_AFTER_REBUILD.md  OPENCL_KERNELS_EXPLAINED.md  PACKET_DROPPING_FIX.md  PHASE_STATUS.md  PRESENTATION_GUIDE.md  README.md  REBUILD_AND_RUN.md  REMAINING_PHASES_PLAN.md  SYSTEM_WORKFLOW.md  TESTING_GUIDE.md  detection_design.md  doc.md  ml_preprocessing_and_training.md  req.md
scripts/: check_status.sh  evaluate_detection.py  fix_build.sh  install_nvidia_opencl.sh  plot_results.py  prepare_data.py  process_caida_pcaps.sh  quick_test.sh  run_experiment.sh  setup_environment.sh  test_ml_single.py
src/: main.cpp
src/blocking/: iptables_simulator.cpp  iptables_simulator.h  pcap_filter.cpp  pcap_filter.h  rtbh_controller.cpp  rtbh_controller.h
src/dashboard/: app.py
src/dashboard/static/js/: dashboard.js
src/dashboard/templates/: index.html
src/detectors/: cusum_detector.cpp  cusum_detector.h  decision_engine.cpp  decision_engine.h  entropy_cpu.cpp  entropy_cpu.h  pca_detector.cpp  pca_detector.h
src/ingest/: pcap_reader.cpp  pcap_reader.h  window_manager.cpp  window_manager.h
src/ml/: evaluate_model.py  feature_builder.cpp  feature_builder.h  feature_extractor.py  features_spec.json  inference_engine.cpp  inference_engine.h  model_wrappers.py  preprocessor.py  train_ml.py  train_models.py
src/opencl/: gpu_detector.cpp  gpu_detector.h  host.cpp  host.h
src/opencl/kernels/: entropy.cl  feature_extract.cl
src/utils/: config_loader.cpp  config_loader.h  logger.cpp  logger.h  metrics_collector.cpp  metrics_collector.h  resource_monitor.cpp  resource_monitor.h  simple_json.cpp  simple_json.h
tools/: benchmark_gpu_performance.cpp  benchmark_phase2.py  data_audit.py  run_gpu_tests.sh  run_phase2_tests.sh  test_gpu_entropy.cpp  test_pcap_processing.py  test_phase2.cpp  validate_entropy.py  validate_gpu_correctness.py  validate_ml_models.py
